tag-04/loesungen/nodeport-service.yaml
# Übung 4.3: NodePort Service
apiVersion: v1
kind: Service
metadata:
  name: web-nodeport
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
